--- a/lab1_gabriel/css/style.css
+++ b/lab1_gabriel/css/style.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 body {
-    background: url('../img/UFABC.jpg') no-repeat center center fixed;
+    background: url('..lab1_gabriel//img/UFABC.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -45,6 +45,7 @@ body {
 .banner-text {
     font-size: 20px;
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .banner h1 {
@@ -52,13 +53,12 @@ body {
     font-size: 2em;
 }
 
-/* Bloco Central */
 .main-content {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 1em;
 }
 
 .content-block {
@@ -66,30 +66,29 @@ body {
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.95);
-    padding: 60px;
-    border-radius: 8px;
+    padding: 2em;
+    border-radius: 1em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     width: 100%;
-    height: 80%;
+    min-height: 80%;
 }
 
 .content-block img{
-    border-radius: 2.5%;
+    border-radius: 1em;
+    height: 20vw;
 }
 
 .block-text {
-    font-size: 20px;
-    padding-left: 20px;
+    font-size: 1em;
+    padding-left: 1em;
 }
 
-/* Footer */
 .footer {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #333;
     color: white;
-    text-align: center;
     padding: 10px 0;
     width: 100%;
 }
