--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,7 @@ header{
 
 .ufabc{
 	padding-top: 3em;
+	padding-bottom: 2em;
     max-width: 7em; 
 }
 
@@ -82,6 +83,10 @@ li {
 
 
 a {
-	text-decoration: none; /* retira o sublinhado do link */
 	color: black;
+}
+
+.audio{
+	margin-top: 4em;
+	margin-bottom: 1em;
 }
