--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -146,3 +146,66 @@ a {
 
 	line-height: 2em;
 }
+
+
+/* POPUP */
+.gallery {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+
+	justify-content: center;
+    align-items: center;
+ 
+    margin: 0;
+}
+
+.gallery img {
+    max-width: 20em;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.gallery img:hover {
+    transform: scale(1.05);
+}
+
+/* Popup estilizado para aparecer acima de todos os outros elementos */
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1000; /* Garanta que o valor de z-index seja maior que o de qualquer outro elemento na página */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Fundo escurecido */
+    align-items: center;
+    justify-content: center;
+}
+
+.popup-content {
+    max-width: 80%;
+    max-height: 80%;
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.close:hover {
+    color: #bbb;
+}
+
+#caption {
+    color: #fff;
+    text-align: center;
+    padding: 10px 20px;
+}
