--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -210,3 +210,34 @@ a {
     text-align: center;
     padding: 10px 20px;
 }
+
+/* Tabela */
+.tabela {
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+    width: 50%; /* Ajuste conforme necessário */
+    margin: auto; /* Centraliza horizontalmente */
+    background: #ffffff;
+}
+
+thead {
+    background-color: #007BFF;
+    color: #ffffff;
+}
+
+th, td {
+    border: 1px solid #ddd; /* Divisórias */
+    padding: 8px;
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2; /* Cor alternada para as linhas */
+}
+
+tr:hover {
+    background-color: #ddd; /* Efeito ao passar o mouse */
+}
